feat: added about, sponsor, subsystem pages

--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
             <div class="person">
                 <div class="person__container">
                     <img class="person__circle" src="images/aboutpage/software2bg.jpg">
-                    <img class="person__img" src="timages/aboutpageest/SoftLead2-removebg-preview.png" alt="Profile photo">
+                    <img class="person__img" src="images/aboutpage/SoftLead2-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
             <h1>Wyat</h1>
@@ -93,7 +93,7 @@
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/softwarebg.avif">
+                    <img class="person__circle" src="images/aboutpage/softwarebg.png">
                     <img class="person__img" src="images/aboutpage/SoftLead-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
