--- a/sponsor.html
+++ b/sponsor.html
@@ -1,72 +1,153 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!--Makes page responsive. To test responsiveness, inspect page and change screen size (options are available)-->
-            <meta name="viewport" content="with=device-width, initial-scale=1.0">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
+<script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
-        <title>WeMars</title>
+<head>
+    <!--Makes page responsive. To test responsiveness, inspect page and change screen size (options are available)-->
+    <meta name="viewport" content="with=device-width, initial-scale=1.0">
 
-        <!--Google Fonts link-->
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&family=Poppins&display=swap" rel="stylesheet">
-        <!--Links css file to html site-->
-        <link rel="stylesheet" href="style.css">
-        <!--Links bootstrapcdn-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    </head>
-    <body>
-        <section class="sub-header">
-            <nav>
-                <a href="index.html"><img src="images/WeMarsLogo.png"></a>
-                <div class="nav-links" id="navLinks">
-                    <!--Close icon from Font Awesome icons-->
-                    <i class="fa fa-times" onclick="hideMenu()"></i>
-                    <ul>
-                        <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
-                        <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
-                        <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
-                        <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
-                    </ul>
-                </div>
-                <i class="fa fa-bars" onclick="showMenu()"></i>
-            </nav>
-            <h1>Sponsors</h1>
-        </section>
+    <title>WeMars</title>
 
-        <section>
+    <!--Google Fonts link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&family=Poppins&display=swap" rel="stylesheet">
+    <!--Links css file to html site-->
+    <link rel="stylesheet" href="style.css">
+    <!--Links bootstrapcdn-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+        integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+</head>
 
-        </section>
-
-        <section class="footer">
-            <h2>WE Mars Team</h2>
-            <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
-            <a href="" class="hero-btn" id="contact-btn">CONTACT US</a>
-            <div class="icons-container">
-                <div class="icons"><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
-                <div class="icons"><a href="https://www.instagram.com/we.mars/"><i class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                <div class="icons"><a href="https://www.linkedin.com/company/western-engineering-mars-rover-team/about/"><i class="fa-brands fa-linkedin fa-2xl"></i></a></div>
+<body>
+    <section class="sub-header">
+        <nav>
+            <a href="index.html"><img src="images/WeMarsLogo.png"></a>
+            <div class="nav-links" id="navLinks">
+                <!--Close icon from Font Awesome icons-->
+                <i class="fa fa-times" onclick="hideMenu()"></i>
+                <ul>
+                    <li><a href="index.html"><span class="top"><span>Home</span></span><span
+                                class="bottom"><span>Home</span></span></a></li>
+                    <li><a href="about.html"><span class="top"><span>About</span></span><span
+                                class="bottom"><span>About</span></span></a></li>
+                    <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span
+                                class="bottom"><span>Subsystems</span></span></a></li>
+                    <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span
+                                class="bottom"><span>Sponsor</span></span></a></li>
+                </ul>
             </div>
-            <p>Made by WeMars members</p>
-        </section>
+            <i class="fa fa-bars" onclick="showMenu()"></i>
+        </nav>
+        <h1>Sponsors</h1>
+    </section>
 
-        <section>
-            <p></p>
-        </section>
-        
-        <!--Javascript for Toggle Menu-->
-        <script>
+    <section id="contact">
 
-            var navLinks = document.getElementById("navLinks");
-
-            function showMenu(){
-                navLinks.style.right = "0";
-            }
-
-            function hideMenu(){
-                navLinks.style.right = "-200px";
-            }
-
+        <script type="text/javascript">
+            (function () {
+                emailjs.init("Gw8QSvCrSmX3V613c");
+            })();
         </script>
-    </body>
+
+        <h1 class="section-header">Contact Us!</h1>
+
+        <div class="contact-wrapper">
+
+            <!-- Left contact page -->
+
+            <form id="contact-form" class="form-horizontal" role="form">
+
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <input type="text" class="form-control" id="name" placeholder="NAME" name="name" value=""
+                            required>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-12">
+                        <input type="email" class="form-control" id="email" placeholder="EMAIL" name="email" value=""
+                            required>
+                    </div>
+                </div>
+
+                <textarea class="form-control" rows="10" placeholder="MESSAGE" name="message" required></textarea>
+
+                <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
+                    <div class="alt-send-button">
+                        <i class="fa fa-paper-plane"></i><span class="send-text">SEND</span>
+                    </div>
+
+                </button>
+
+            </form>
+
+            <!-- Left contact page -->
+
+            <div class="direct-contact-container">
+
+                <ul class="contact-list">
+                    <li class="list-item"><i class="fa fa-map-marker fa-2x"><span class="contact-text place">London,
+                                Ontario</span></i></li>
+
+                    <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a
+                                    href="mailto:hitmeup@gmail.com"
+                                    title="Send me an email">hitmeup@gmail.com</a></span></i></li>
+
+                </ul>
+
+                <hr>
+                <ul class="social-media-list">
+                    <li><a href="https://www.instagram.com/we.mars/" target="_blank" class="contact-icon">
+                            <i class="fab fa-instagram" aria-hidden="true"></i></a>
+                    </li>
+                    <li><a href="https://www.linkedin.com/company/western-engineering-mars-rover-team/" target="_blank" class="contact-icon">
+                            <i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                    </li>
+                </ul>
+                <hr>
+            </div>
+
+        </div>
+
+    </section>
+
+    <section class="footer">
+        <h2>WE Mars Team</h2>
+        <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
+        <a href="" class="hero-btn" id="contact-btn">CONTACT US</a>
+        <div class="icons-container">
+            <div class="icons"><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
+            <div class="icons"><a href="https://www.instagram.com/we.mars/"><i
+                        class="fa-brands fa-instagram fa-2xl"></i></a></div>
+            <div class="icons"><a href="https://www.linkedin.com/company/western-engineering-mars-rover-team/about/"><i
+                        class="fa-brands fa-linkedin fa-2xl"></i></a></div>
+        </div>
+        <p>Made by WeMars members</p>
+    </section>
+
+    <section>
+        <p></p>
+    </section>
+
+    <!--Javascript for Toggle Menu-->
+    <script>
+
+        var navLinks = document.getElementById("navLinks");
+
+        function showMenu() {
+            navLinks.style.right = "0";
+        }
+
+        function hideMenu() {
+            navLinks.style.right = "-200px";
+        }
+
+    </script>
+    <script src="email.js"></script>
+</body>
+
 </html>
