fix: added rest of leads and their photos

--- a/about.html
+++ b/about.html
@@ -44,36 +44,40 @@
     </section>
 
     <div class="row">
+
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/projleadbg.jpg">
-                    <img class="person__img" id="projLead" src="images/aboutpage/ProjLead-removebg-preview.png" alt="Profile photo">
+                    <img class="person__circle" src="images/aboutpage/projleadbg2.jpg">
+                    <img class="person__img" id="projlead2" src="images/aboutpage/ProjLeadThomas-removebg-preview.png"
+                        alt="Profile photo">
                 </div>
             </div>
-            <h1>Clara Levy</h1>
+            <h1>Thomas Nalsh</h1>
             <h4>Project Manager</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/software2bg.jpg">
-                    <img class="person__img" src="images/aboutpage/SoftLead2-removebg-preview.png" alt="Profile photo">
+                    <img class="person__circle" src="images/aboutpage/projleadbg.jpg">
+                    <img class="person__img" id="projLead" src="images/aboutpage/ProjLead-removebg-preview.png"
+                        alt="Profile photo">
                 </div>
             </div>
-            <h1>Thomas Nalsh</h1>
+            <h1>Clara Levy</h1>
             <h4>Vice-Project Manager</h4>
         </div>
 
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/software2bg.jpg">
-                    <img class="person__img" src="images/aboutpage/SoftLead2-removebg-preview.png" alt="Profile photo">
+                    <img class="person__circle" src="images/aboutpage/elecleadbg.jpg">
+                    <img class="person__img" id="eleclead" style="bottom: -35;"
+                        src="images/aboutpage/ElecLeadWyatt-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Wyat</h1>
+            <h1>Wyatt</h1>
             <h4>Electrical Lead</h4>
         </div>
 
@@ -85,7 +89,7 @@
                 </div>
             </div>
             <h1>Sean McBride</h1>
-            <h4>Programming Lead</h4>
+            <h4>Electrical Lead</h4>
         </div>
     </div>
 
@@ -115,12 +119,76 @@
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/software2bg.jpg">
-                    <img class="person__img" src="images/aboutpage/SoftLead2-removebg-preview.png" alt="Profile photo">
+                    <img class="person__circle" src="images/aboutpage/buslead2bg.webp">
+                    <img class="person__img" id="buislead" src="images/aboutpage/BusLeadNathan-removebg-preview.png"
+                        alt="Profile photo">
                 </div>
             </div>
-            <h1>Natahn Eng</h1>
-            <h4>Programming Lead</h4>
+            <h1>Nathan Eng</h1>
+            <h4>Buisness Lead</h4>
+        </div>
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/buisleadbg2.jpg">
+                    <img class="person__img" id="buislead" src="images/aboutpage/BusinessLeadRad-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Raddy Daddy</h1>
+            <h4>Buisness Lead</h4>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/arminbg.jpg">
+                    <img class="person__img" id="sciencelead"
+                        src="images/aboutpage/ArminScienceLead-removebg-preview.png" alt="Profile photo">
+                </div>
+            </div>
+            <h1>Armin ?????</h1>
+            <h4>Science Lead</h4>
+        </div>
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/scileadbg.webp">
+                    <img class="person__img" id="scilead" src="images/aboutpage/ScienceLeadJames-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>James ???</h1>
+            <h4>Science Lead</h4>
+        </div>
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/mechbg.jpg">
+                    <img class="person__img" id="mechlead" src="images/aboutpage/MechLeadHanro-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Hanro Delport</h1>
+            <h4>Mechanical Lead</h4>
+        </div>
+
+        <div class="profile">
+            <div class="person">
+                <div class="person__container">
+                    <img class="person__circle" src="images/aboutpage/mechbg2.jpg">
+                    <img class="person__img" id="mechlead2" src="images/aboutpage/MechLeadIsabel-removebg-preview.png"
+                        alt="Profile photo">
+                </div>
+            </div>
+            <h1>Isabel Nalsh</h1>
+            <h4>Mechanical Lead</h4>
         </div>
     </div>
 
