--- a/sponsor.html
+++ b/sponsor.html
@@ -94,8 +94,8 @@
                                 Ontario</span></i></li>
 
                     <li class="list-item"><i class="fa fa-envelope fa-2x"><span class="contact-text gmail"><a
-                                    href="mailto:hitmeup@gmail.com"
-                                    title="Send me an email">hitmeup@gmail.com</a></span></i></li>
+                                    href="mailto:wemars@uwo.ca"
+                                    title="Send me an email">wemars@uwo.ca</a></span></i></li>
 
                 </ul>
 
