--- a/about.html
+++ b/about.html
@@ -24,8 +24,6 @@
         <nav>
             <a href="index.html"><img src="images/WeMarsLogo.png"></a>
             <div class="nav-links" id="navLinks">
-                <!--Close icon from Font Awesome icons-->
-                <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="index.html"><span class="top"><span>Home</span></span><span
                                 class="bottom"><span>Home</span></span></a></li>
@@ -37,7 +35,6 @@
                                 class="bottom"><span>Sponsor</span></span></a></li>
                 </ul>
             </div>
-            <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
 
         <h1>Our Team</h1>
@@ -53,7 +50,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Thomas Nalsh</h1>
+            <h1>Thomas Naish</h1>
             <h4>Project Manager</h4>
         </div>
 
@@ -77,7 +74,7 @@
                         src="images/aboutpage/ElecLeadWyatt-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Wyatt</h1>
+            <h1>Wyatt Welyhorsky</h1>
             <h4>Electrical Lead</h4>
         </div>
 
@@ -119,7 +116,7 @@
         <div class="profile">
             <div class="person">
                 <div class="person__container">
-                    <img class="person__circle" src="images/aboutpage/buslead2bg.webp">
+                    <img class="person__circle" src="images/aboutpage/buslead2bg.jpg">
                     <img class="person__img" id="buislead" src="images/aboutpage/BusLeadNathan-removebg-preview.png"
                         alt="Profile photo">
                 </div>
@@ -136,7 +133,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Raddy Daddy</h1>
+            <h1>Syed Rad</h1>
             <h4>Buisness Lead</h4>
         </div>
     </div>
@@ -151,7 +148,7 @@
                         src="images/aboutpage/ArminScienceLead-removebg-preview.png" alt="Profile photo">
                 </div>
             </div>
-            <h1>Armin ?????</h1>
+            <h1>Armin Bradaric</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -163,7 +160,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>James ???</h1>
+            <h1>James Krizsan</h1>
             <h4>Science Lead</h4>
         </div>
 
@@ -187,7 +184,7 @@
                         alt="Profile photo">
                 </div>
             </div>
-            <h1>Isabel Nalsh</h1>
+            <h1>Isabel Naish</h1>
             <h4>Mechanical Lead</h4>
         </div>
     </div>
