fix: Corrected typo in business

--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <h1>Nathan Eng</h1>
-            <h4>Buisness Lead</h4>
+            <h4>Business Lead</h4>
         </div>
 
         <div class="profile">
@@ -134,7 +134,7 @@
                 </div>
             </div>
             <h1>Syed Rad</h1>
-            <h4>Buisness Lead</h4>
+            <h4>Business Lead</h4>
         </div>
     </div>
 
