--- a/subsystems.html
+++ b/subsystems.html
@@ -52,7 +52,7 @@
     </card>
     <card
         data-image="images/Buis/lilBuisDudes.webp">
-        <h1 slot="header">Buisness</h1>
+        <h1 slot="header">Business</h1>
         <p slot="content" class="aboutblurb">Our software team is central to our university's rover project, handling both the development of the code that drives the rover and the design of the homebase interface. This dashboard is crucial for interpreting the data from our onboard sensors, enabling our team to monitor and guide the rover effectively. With tools like GPS for accurate tracking, cameras for live visuals, and a LiDAR system for assessing terrain depths, we're equipped to handle challenges in real-time. This project showcases our commitment to technological innovation.</p>
     </card>
     <card
