feat: Added blurbs for the remaining teams

--- a/subsystems.html
+++ b/subsystems.html
@@ -38,7 +38,7 @@
     <card
         data-image="images/Mechanical/simple-mechanical-projects.webp">
         <h1 slot="header">Mechanical</h1>
-        <p slot="content" class="aboutblurb">The WE Mars electrical team uses Altium software to design all of the electrical systems used on the Rover. From the most basic usb connecter to the more complex motor control and CAN Bus boards they are all designed and soldered together by the WE Mars electrical team. All the electrical control and design used on our rover is constructed by our electrical team.</p>
+        <p slot="content" class="aboutblurb">The mechanical team at WEMARS plays an integral role in the physical realization of the club's projects. Their expertise lies in designing, testing, and constructing the rover's chassis and arm, ensuring both robustness and functionality in challenging environments. Beyond assembly, they are also deeply involved in researching and developing innovative methods for casting carbon fiber components for the rover. This focus on advanced materials and construction techniques is key to enhancing the rover's durability and efficiency, positioning the team at the forefront of rover design and engineering.</p>
     </card>
     <card
         data-image="images/Electrical/electricalLilDudes.webp">
@@ -53,12 +53,12 @@
     <card
         data-image="images/Buis/lilBuisDudes.webp">
         <h1 slot="header">Business</h1>
-        <p slot="content" class="aboutblurb">Our software team is central to our university's rover project, handling both the development of the code that drives the rover and the design of the homebase interface. This dashboard is crucial for interpreting the data from our onboard sensors, enabling our team to monitor and guide the rover effectively. With tools like GPS for accurate tracking, cameras for live visuals, and a LiDAR system for assessing terrain depths, we're equipped to handle challenges in real-time. This project showcases our commitment to technological innovation.</p>
+        <p slot="content" class="aboutblurb">The WE Mars business team plays a crucial role in the sustainability and growth of the club. They are responsible for reaching out to potential sponsors, establishing and nurturing vital relationships with them. Their efforts ensure a consistent stream of support and resources, which are essential for the successful execution of the club's activities and events. This team serves as the bridge between WEMARS and the external business community, facilitating the club's objectives and projects.</p>
     </card>
     <card
         data-image="images/Science/sciencecard.webp">
         <h1 slot="header">Science</h1>
-        <p slot="content" class="aboutblurb">Our software team is central to our university's rover project, handling both the development of the code that drives the rover and the design of the homebase interface. This dashboard is crucial for interpreting the data from our onboard sensors, enabling our team to monitor and guide the rover effectively. With tools like GPS for accurate tracking, cameras for live visuals, and a LiDAR system for assessing terrain depths, we're equipped to handle challenges in real-time. This project showcases our commitment to technological innovation.</p>
+        <p slot="content" class="aboutblurb">The WE Mars science team's primary responsibility involves researching innovative methods to analyze soil for definitive signs of life, a task that blends biological insight with technical expertise. Additionally, they are tasked with designing sophisticated mechanical systems capable of autonomously testing the soil. This blend of scientific inquiry and engineering acumen is crucial for the team's success in pushing the boundaries of soil analysis and astrobiology.</p>
     </card>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
