feat: Added in the sponsorship package

--- a/sponsor.html
+++ b/sponsor.html
@@ -42,6 +42,13 @@
         <h1>Sponsors</h1>
     </section>
 
+    <div>
+        <h1 class="section-header">Sponsorship Package</h1>
+        <div class="sponsorship-package-div">
+            <embed src="images/WEMARS_Sponsor_Package.pdf" width="700" height="800" type="application/pdf">
+        </div>
+    </div>
+
     <section id="contact">
 
         <script type="text/javascript">
