--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 
 <body>
     <section class="sub-header">
-        <nav>
+        <nav class="d-nav">
             <a href="index.html"><img src="images/WeMarsLogo.png"></a>
             <div class="nav-links" id="navLinks">
                 <ul>
@@ -31,14 +31,32 @@
                                 class="bottom"><span>About</span></span></a></li>
                     <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span
                                 class="bottom"><span>Subsystems</span></span></a></li>
+                    <li><a href="progress.html"><span class="top"><span>Progress</span></span><span 
+                                class="bottom"><span>Progress</span></a></li>
                     <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span
                                 class="bottom"><span>Sponsor</span></span></a></li>
                 </ul>
             </div>
         </nav>
 
+        <nav class="m-nav">
+            <div class="responsive-nav">
+                <img src="images/WeMarsLogo.png" class="logo">
+                <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
+                <div class="bar" id="myLinks">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="subsystems.html">Subsystems</a>
+                    <a href="progress.html">Progress</a>
+                    <a href="sponsor.html">Sponsor</a>
+                </div>
+            </div>
+        </nav>
+
         <h1>Our Team</h1>
     </section>
+
+
 
     <div class="row">
 
@@ -192,7 +210,7 @@
     <section class="footer">
         <h2>WE Mars Team</h2>
         <h3>1151 Richmond St<br>London, ON N6A 3K7</h3>
-        <a href="" class="hero-btn" id="contact-btn">CONTACT US</a>
+        <a href="sponsor.html" class="hero-btn" id="contact-btn">CONTACT US</a>
         <div class="icons-container">
             <div class="icons"><a href=""><i class="fa-brands fa-facebook fa-2xl"></i></a></div>
             <div class="icons"><a href="https://www.instagram.com/we.mars/"><i
@@ -221,6 +239,23 @@
         }
 
     </script>
+
+
+    <!--Javascript for mobile menu toggling-->
+    <script>
+
+        function toggleMenu() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+    </script>
+
+
 </body>
 
 </html>
