--- a/sponsor.html
+++ b/sponsor.html
@@ -34,12 +34,29 @@
                                 class="bottom"><span>About</span></span></a></li>
                     <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span
                                 class="bottom"><span>Subsystems</span></span></a></li>
+                    <li><a href="progress.html"><span class="top"><span>Progress</span></span><span 
+                                class="bottom"><span>Progress</span></a></li>
                     <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span
                                 class="bottom"><span>Sponsor</span></span></a></li>
                 </ul>
             </div>
         </nav>
         <h1>Sponsors</h1>
+
+        <nav class="m-nav">
+            <div class="responsive-nav">
+                <img src="images/WeMarsLogo.png" class="logo">
+                <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
+                <div class="bar" id="myLinks">
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About</a>
+                    <a href="subsystems.html">Subsystems</a>
+                    <a href="progress.html">Progress</a>
+                    <a href="sponsor.html">Sponsor</a>
+                </div>
+            </div>
+        </nav>
+
     </section>
 
     <div>
@@ -153,6 +170,18 @@
 
     </script>
     <script src="email.js"></script>
+    <script>
+
+        function toggleMenu() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+    </script>
 </body>
 
 </html>
