--- a/subsystems.html
+++ b/subsystems.html
@@ -24,12 +24,28 @@
                         <li><a href="index.html"><span class="top"><span>Home</span></span><span class="bottom"><span>Home</span></span></a></li>
                         <li><a href="about.html"><span class="top"><span>About</span></span><span class="bottom"><span>About</span></span></a></li>
                         <li><a href="subsystems.html"><span class="top"><span>Subsystems</span></span><span class="bottom"><span>Subsystems</span></span></a></li>
+                        <li><a href="progress.html"><span class="top"><span>Progress</span></span><span class="bottom"><span>Progress</span></a></li>
                         <li><a href="sponsor.html"><span class="top"><span>Sponsor</span></span><span class="bottom"><span>Sponsor</span></span></a></li>
                     </ul>
                 </div>
             </nav>
 
             <h1>Subsystems</h1>
+
+            <nav class="m-nav">
+                <div class="responsive-nav">
+                    <img src="images/WeMarsLogo.png" class="logo">
+                    <a href="javascript:void(0);" class="icon" onclick="toggleMenu()"><i class="fa fa-bars"></i></a>
+                    <div class="bar" id="myLinks">
+                        <a href="index.html">Home</a>
+                        <a href="about.html">About</a>
+                        <a href="subsystems.html">Subsystems</a>
+                        <a href="progress.html">Progress</a>
+                        <a href="sponsor.html">Sponsor</a>
+                    </div>
+                </div>
+            </nav>
+
         </section>
 
 
@@ -63,6 +79,19 @@
 </div>
 <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
 <script src="subsystem.js"></script>
+
+    <script>
+
+        function toggleMenu() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+
+    </script>
         
     </body>
 </html>
